Procesar bien CORS y JWT